# aquamarine

./: README.md  aqua.req  pyproject.toml
aquamarine/: app.py
aquamarine/qml/: main.qml
qml/: main.qml
