[tool.poetry]
name = "aquamarine"
version = "0.1.0"
description = "Drawing app for linux"
authors = ["NeodymiumOre <maciejbarna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
